# signet

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.test.yml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
clients/go/: README.md
clients/go/example/: go.mod  main.go
clients/go/signet/: client.go  go.mod
examples/: generate_keys.rs  notes_api.rs  test_notes_api.sh
migrations/: 002_outbox_events.sql  003_password_reset_tokens.sql  init.sql
proto/: auth.proto
src/: config.rs  error.rs  helpers.rs  lib.rs  main.rs  models.rs  openapi.rs  pagination.rs  schema.rs
src/auth/: jwt.rs  lockout.rs  mod.rs  password.rs
src/cache/: mod.rs  permission_cache.rs  token_revocation.rs
src/events/: mod.rs  outbox.rs  publisher.rs  types.rs
src/grpc/: auth_service.rs  mod.rs
src/handlers/: auth.rs  health.rs  members.rs  mod.rs  permissions.rs  projects.rs  roles.rs  user_permissions.rs
src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
src/telemetry/: metrics.rs  mod.rs  tracing.rs
tests/: auth.rs  events.rs  health_check.rs  password_reset.rs  projects.rs  rate_limiting.rs  roles_permissions.rs  user_permissions.rs
tests/common/: mod.rs
