[package]
name = "signet"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Role-based access control (RBAC) system with JWT authentication"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ConeDjordjic/signet"
homepage = "https://github.com/ConeDjordjic/signet"
keywords = ["rbac", "authentication", "authorization", "jwt", "api"]
categories = ["authentication", "web-programming"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "signet"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "limit", "timeout"] }

# Database
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json"] }
diesel_migrations = "2.3"

# Authentication
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.19", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
dotenvy = "0.15"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics"] }
tracing-opentelemetry = "0.28"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Rate limiting
governor = "0.10"

# Redis (for caching and token revocation)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Security
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
once_cell = "1.21"
serial_test = "3.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
